Replaced usages of deprecated Thread.getId by Thread.threadId
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>