@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 Contributors to the Eclipse Foundation
+ * Copyright (c) 2022, 2025 Contributors to the Eclipse Foundation
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0, which is available at
@@ -47,7 +47,7 @@ public final class VirtualServerGlassFishLogger extends GlassFishLogger {
                 record.setResourceBundle(bundle);
             }
         }
-        record.setThreadID((int) Thread.currentThread().getId());
+        record.setLongThreadID((int) Thread.currentThread().threadId());
         super.log(record);
     }
 
